--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -29,32 +29,38 @@
          <div class="mt-1"><概要><br><%= @event.outline %></div>
          <div class="mt-1">開催地：<%= Prefecture.names.invert[@event.prefecture_id] %><%= @event.place %></div>
          <div class="mt-3">
+          <% if user_signed_in? %>
            <% if @event.user_id == current_user.id %>
             <%= link_to "編集", edit_event_path(@event.id), class: "btn btn-success" %>
            <% else %>
-            <%= link_to '予約する', new_event_reservation_path(@event.id) %>
+            <%= link_to '予約する', new_event_reservation_path(@event.id), class: "btn btn-success" %>
            <% end %>
-          </div>
+          <% else %>
+            <%= link_to '予約する', new_user_session_path, class: "btn btn-success" %>
+          <% end %>
+         </div>
         </div>
       </div>
      </div>
 
       <div class="row justify-content-center">
         <div class="ml-1 mt-3">
-         <% if @event.favorited_by?(current_user) %>
-          <p>
-           <%= link_to event_favorites_path(@event), method: :delete do %>
-            <i class="fa-solid fa-heart" style="color: #ff0505;"></i>
-             <%= @event.favorites.count %> いいね
-           <% end %>
-          </p>
-          <% else %>
-          <p>
-           <%= link_to event_favorites_path(@event), method: :post do %>
-            <i class="fa-regular fa-heart" style="color: #ff0505;"></i>
-             <%= @event.favorites.count %> いいね
-           <% end %>
-          </p>
+         <% if user_signed_in? %>
+          <% if @event.favorited_by?(current_user) %>
+           <p>
+            <%= link_to event_favorites_path(@event), method: :delete do %>
+             <i class="fa-solid fa-heart" style="color: #ff0505;"></i>
+              <%= @event.favorites.count %> いいね
+            <% end %>
+           </p>
+           <% else %>
+           <p>
+            <%= link_to event_favorites_path(@event), method: :post do %>
+             <i class="fa-regular fa-heart" style="color: #ff0505;"></i>
+              <%= @event.favorites.count %> いいね
+            <% end %>
+           </p>
+          <% end %>
          <% end %>
         </div>
 
@@ -65,10 +71,12 @@
           <%= comment.user.full_name %><br>
           <%= comment.created_at.strftime('%Y/%m/%d') %><span style="margin-right: 10px;"></span><%= comment.comment %>
           <span style="margin-right: 10px;"></span>
-          <% if comment.user == current_user %>
-           <%= link_to "削除", event_comment_path(comment.event, comment), method: :delete %>
+           <% if user_signed_in? %>
+            <% if comment.user == current_user %>
+             <%= link_to "削除", event_comment_path(comment.event, comment), method: :delete %>
+            <% end %>
+           <% end %>
           <% end %>
-         <% end %>
         </div>
         <div class="ml-5 mt-4">
          <%= form_with model: [@event, @comment] do |f| %>
@@ -77,6 +85,7 @@
          <% end %>
         </div>
       </div>
+  </div>
 
- </div>
+
 </div>
