--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -1,91 +1,113 @@
-<div class="container">
- <div class="mt-5 ml-3 text-center"><h4>イベント詳細</h4></div>
-
-  <div class="container mt-4">
-    <div class="row justify-content-center">
-      <div class="col-md-8 mt-4">
-        <div class="row">
-          <div class="col-md-4">
-            <% if @event.image.attached? %>
-              <%= image_tag @event.image, size: "250x250" %>
-            <% else %>
-              <%= image_tag 'no_image', size: "250x250" %>
-            <% end %>
-          </div>
-            <div class="col-md-8">
-              <div class="ml-1 mt-1"><%= @event.name %></div>
-              <% @event.event_categories.each do |ec| %>
-               <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
-              <% end %>
-              <div class="ml-1 mt-1">開催日時　　：<%= @event.date %></div>
-              <div class="ml-1 mt-1">開催地　　　：<%= Prefecture.names.invert[@event.prefecture_id] %><%= @event.place %></div>
-              <div class="ml-1 mt-1">募集人数　　：<%= @event.number %>人</div>
-              <div class="ml-1 mt-1">参加料金　　：<%= @event.fee %>円</div>
-              <div class="ml-1 mt-1">お支払い方法：<%= @event.how_to_pay_i18n %></div>
-            </div>
-        </div>
-
-        <div class="text-center">
-         <div class="mt-1"><概要><br><%= @event.outline %></div>
-         <div class="mt-1">開催地：<%= Prefecture.names.invert[@event.prefecture_id] %><%= @event.place %></div>
-         <div class="mt-3">
-          <% if user_signed_in? %>
-           <% if @event.user_id == current_user.id %>
-            <%= link_to "編集", edit_event_path(@event.id), class: "btn btn-success" %>
-           <% else %>
-            <%= link_to '予約する', new_event_reservation_path(@event.id), class: "btn btn-success" %>
-           <% end %>
-          <% else %>
-            <%= link_to '予約する', new_user_session_path, class: "btn btn-success" %>
-          <% end %>
-         </div>
-        </div>
-      </div>
-     </div>
-
-      <div class="row justify-content-center">
-        <div class="ml-1 mt-3">
-         <% if user_signed_in? %>
-          <% if @event.favorited_by?(current_user) %>
-           <p>
-            <%= link_to event_favorites_path(@event), method: :delete do %>
-             <i class="fa-solid fa-heart" style="color: #ff0505;"></i>
-              <%= @event.favorites.count %> いいね
-            <% end %>
-           </p>
-           <% else %>
-           <p>
-            <%= link_to event_favorites_path(@event), method: :post do %>
-             <i class="fa-regular fa-heart" style="color: #ff0505;"></i>
-              <%= @event.favorites.count %> いいね
-            <% end %>
-           </p>
-          <% end %>
-         <% end %>
-        </div>
-
-        <div class="ml-3 mt-3">
-         <p>コメント件数:<%= @event.comments.count %></p>
-          <% @event.comments.each do |comment| %>
-          <p><%= image_tag comment.user.get_image(100,100) %></p>
-          <%= comment.user.full_name %><br>
-          <%= comment.created_at.strftime('%Y/%m/%d') %><span style="margin-right: 10px;"></span><%= comment.comment %>
-          <span style="margin-right: 10px;"></span>
-           <% if user_signed_in? %>
-            <% if comment.user == current_user %>
-             <%= link_to "削除", event_comment_path(comment.event, comment), method: :delete %>
-            <% end %>
-           <% end %>
-          <% end %>
-        </div>
-        <div class="ml-5 mt-4">
-         <%= form_with model: [@event, @comment] do |f| %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントしてください" %>
-          <%= f.submit "投稿する" %>
-         <% end %>
-        </div>
-      </div>
+<div class="container mt-5">
+  <div class="text-center">
+    <h4>イベント詳細</h4>
   </div>
 
+  <div class="row justify-content-center mt-4">
+    <div class="col-md-8">
+      <div class="row">
+        <!-- イベント写真 -->
+        <div class="col-md-4">
+          <div class="text-center">
+            <% if @event.image.attached? %>
+              <%= image_tag @event.image, size: "250x250", class: "img-fluid rounded" %>
+            <% else %>
+              <%= image_tag 'no_image', size: "250x250", class: "img-fluid rounded" %>
+            <% end %>
+          </div>
+        </div>
+        <!-- イベント詳細情報 -->
+        <div class="col-md-8">
+          <div class="mb-2"><h5><%= @event.name %></h5></div>
+          <div class="event-categories mb-2">
+            <% @event.event_categories.each do |ec| %>
+              <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
+            <% end %>
+          </div>
+          <div class="mt-2">
+            <p>開催日時：<%= @event.date %></p>
+            <p>開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></p>
+            <p>募集人数：<%= @event.number %>人</p>
+            <p>参加料金：<%= @event.fee %>円</p>
+            <p>お支払い方法：<%= @event.how_to_pay_i18n %></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- イベント概要 -->
+      <div class="text-center mt-4">
+        <h5>概要</h5>
+        <p><%= @event.outline %></p>
+      </div>
+
+      <!-- 予約ボタン -->
+      <div class="text-center mt-4">
+        <% if user_signed_in? %>
+          <% if @event.user_id == current_user.id %>
+            <%= link_to "編集", edit_event_path(@event.id), class: "btn btn-success" %>
+          <% else %>
+            <%= link_to '予約する', new_event_reservation_path(@event.id), class: "btn btn-success" %>
+          <% end %>
+        <% else %>
+          <%= link_to '予約する', new_user_session_path, class: "btn btn-success" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+  <div class="row justify-content-center mt-4">
+    <!-- いいねとコメント -->
+    <div class="col-md-8">
+      <div class="mb-3">
+        <% if user_signed_in? %>
+          <% if @event.favorited_by?(current_user) %>
+            <%= link_to event_favorites_path(@event), method: :delete do %>
+              <i class="fa-solid fa-heart" style="color: #ff0505;"></i>
+              <%= @event.favorites.count %> いいね
+            <% end %>
+          <% else %>
+            <%= link_to event_favorites_path(@event), method: :post do %>
+              <i class="fa-regular fa-heart" style="color: #ff0505;"></i>
+              <%= @event.favorites.count %> いいね
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+
+      <h5>コメント</h5>
+      <p>コメント件数:<%= @event.comments.count %></p>
+      <% @event.comments.each do |comment| %>
+        <div class="media mb-3">
+          <img src="<%= comment.user.get_image(100,100) %>" class="mr-3" alt="<%= comment.user.full_name %>" width="100">
+          <div class="media-body">
+            <h6 class="mt-0"><%= comment.user.full_name %></h6>
+            <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
+            <p><%= comment.comment %></p>
+            <% if user_signed_in? && comment.user == current_user %>
+              <%= link_to "削除", event_comment_path(comment.event, comment), method: :delete, class: "text-danger" %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="row justify-content-center mt-4">
+    <div class="col-md-8">
+      <% if user_signed_in? %>
+        <%= form_with model: [@event, @comment], html: { class: "mt-3" } do |f| %>
+          <h5>コメントを投稿</h5>
+          <div class="form-group">
+            <%= f.text_area :comment, rows: '5', placeholder: "コメントしてください", class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "投稿する", class: "btn btn-primary" %>
+          </div>
+        <% end %>
+      <% else %>
+        <%= link_to 'コメントを投稿するにはログインしてください', new_user_session_path, class: "btn btn-primary" %>
+      <% end %>
+ 　　 </div>
+  </div>
 
 </div>
